Alarm rules CF: fix owner entities cache for customers