@@ -42,6 +42,7 @@ import org.thingsboard.server.common.data.validation.NoXss;
 import java.io.Serial;
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.Map;
 import java.util.Set;
 
 @Schema
@@ -52,9 +53,14 @@ public class CalculatedField extends BaseData<CalculatedFieldId> implements HasN
     @Serial
     private static final long serialVersionUID = 4491966747773381420L;
 
-    public static final Set<EntityType> SUPPORTED_ENTITIES = Collections.unmodifiableSet(EnumSet.of(
-            EntityType.DEVICE, EntityType.ASSET, EntityType.DEVICE_PROFILE, EntityType.ASSET_PROFILE, EntityType.CUSTOMER
-    ));
+    public static final Map<EntityType, Set<CalculatedFieldType>> SUPPORTED_ENTITIES = Map.of(
+            EntityType.DEVICE, CalculatedFieldType.all,
+            EntityType.ASSET, CalculatedFieldType.all,
+            EntityType.DEVICE_PROFILE, CalculatedFieldType.all,
+            EntityType.ASSET_PROFILE, CalculatedFieldType.all,
+            EntityType.CUSTOMER, Set.of(CalculatedFieldType.ALARM)
+    );
+
     public static final Set<EntityType> SUPPORTED_REFERENCED_ENTITIES = Collections.unmodifiableSet(EnumSet.of(
             EntityType.DEVICE, EntityType.ASSET, EntityType.CUSTOMER, EntityType.TENANT
     ));
